# Macro-Econ-ML

./: .gitignore  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  test_pipeline.py
notebooks/: ensemble_soft_voting.ipynb  ensemble_soft_voting.py  fred_md_utils.py  inflation_forecasting.ipynb  inflation_forecasting_elastinet.ipynb  inflation_forecasting_gbt.ipynb  inflation_forecasting_gbt.py  inflation_forecasting_ols.ipynb  inflation_forecasting_rnn.ipynb  model_comparison.ipynb
src/: __init__.py  data_loader.py  generate_sample_data.py  models.py  visualizations.py
